--- a/src/help.scss
+++ b/src/help.scss
@@ -1,4 +1,5 @@
 .dgt_helpFolded {
+  color: black;
   font-family: "Alata", sans-serif;
   font-weight: bold;
   font-size: 34px;
